objects/ASI_CRM_CompetitorVisit__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CompetitorVisitDate__c</fullName>
        <label>Competitor Visit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CompetitorVisitName__c</fullName>
        <label>Competitor Visit Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diageo</fullName>
                </value>
                <value>
                    <fullName>Hennessy</fullName>
                </value>
                <value>
                    <fullName>Remy</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Competitor Visits</relationshipLabel>
        <relationshipName>ASI_CRM_Customer_CompetitorVisits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PGLeader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PG Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ASI_CRM_PGLeader_CompetitorVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Promoter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promoter</label>
        <referenceTo>ASI_CRM_Promoter__c</referenceTo>
        <relationshipLabel>Competitor Visits</relationshipLabel>
        <relationshipName>ASI_CRM_Promoter_CompetitorVisits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_StagingDateTime__c</fullName>
        <label>Staging DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SubmitDateTime__c</fullName>
        <label>Submit DateTime</label>
        <type>DateTime</type>
    </fields>
    <label>Competitor Visit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_VN_Competitor_Visits</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_CompetitorVisitName__c</columns>
        <columns>ASI_CRM_CompetitorVisitDate__c</columns>
        <columns>ASI_CRM_Promoter__c</columns>
        <columns>ASI_CRM_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_CompetitorVisit__c.ASI_CRM_VN_CompetitorVisit</value>
        </filters>
        <label>All VN Competitor Visits</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CV-{YY}{000000}</displayFormat>
        <label>Competitor Visit No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Visits</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_VN_CompetitorVisit</fullName>
        <active>true</active>
        <label>VN Competitor Visit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>